# multistream

./: .gitignore  .oxlintrc.json  .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  lighthouserc.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/scripts/: lighthouse-summary.mjs
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit  pre-push
e2e/: share-import-link.spec.ts  stream-lifecycle.spec.ts  transcription.spec.ts
scripts/: sync-version.ts
src/: App.vue  style.css
src-tauri/: .env.example  .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: custom.toml
src-tauri/src/: lib.rs  main.rs  models.rs  notifications.rs  screenshot.rs
src-tauri/src/audio/: capture.rs  mod.rs  transcriber.rs
src-tauri/src/core/: keyboard_shortcuts.js  screenshot_capture.js
src-tauri/src/kick/: api.rs  commands.rs  error.rs  mod.rs  oauth.rs  pusher.rs  state.rs
src-tauri/src/recording/: commands.rs  disk.rs  error.rs  installer.rs  mod.rs  orphan.rs  paths.rs  sidecar.rs  state.rs  utils.rs  validation.rs
src-tauri/src/twitch/: commands.rs  error.rs  irc.rs  mod.rs  oauth.rs  state.rs
src/components/: AddStreamDialog.vue  KickChat.vue  KickStream.vue  TwitchChat.vue  TwitchStream.vue  YoutubeChat.vue  YoutubeStream.vue
src/components/chat/: BaseChat.vue  ChatRichInput.vue  EmotePicker.vue  KickChat.vue  KickNativeChat.vue  LoginPrompt.vue  TranscriptView.vue  TwitchChat.vue  TwitchNativeChat.vue  UnifiedChat.vue  UnifiedChatMessage.vue  UnifiedTwitchChat.vue  YoutubeChat.vue
src/components/dialogs/: AddDialog.vue  ConfirmDialog.vue  ImportDialog.vue  KickAuthDialog.vue  OnboardingTour.vue  SettingsDialog.vue  ShareDialog.vue  TwitchAuthDialog.vue
src/components/icons/: CustomIcon.vue  KickIcon.vue  TwitchIcon.vue  UnitedStatesFlagIcon.vue  YoutubeIcon.vue  index.ts
src/components/main/: EmptyState.vue  FollowedChannelsSidebar.vue  SidebarPanel.vue  StreamGrid.vue  SuggestedStreams.vue  TranscriptionOverlay.vue
src/composables/: useBackup.ts  useChannelSearch.ts  useDeepLink.ts  useDragAndDrop.ts  useEmotes.ts  useFavorites.ts  useFocusedStream.ts  useFollowedChannels.ts  useKickAuth.ts  useKickChat.ts  useLiveStatus.ts  useMediaCodecs.ts  usePreferences.ts  useProfilePicture.ts  useRecentEmotes.ts  useRecents.ts  useRecording.ts  useScreenshot.ts  useStreams.ts  useTranscription.ts  useTwitchAuth.ts  useUnifiedChat.ts  useUnifiedChatState.ts  useUpdater.ts
src/config/: api.ts  i18n.ts  platforms.ts  watchTime.ts
src/i18n/: index.ts
src/i18n/__tests__/: index.spec.ts
src/lib/: http.ts  parseUrlOptions.ts  platformParser.ts
src/test/: setup.ts
website/: README.md  package.json
website/public/: robots.txt  sitemap.xml
(+76 files in other folders)
