[package]
name = "multistream"
version = "0.4.0"
description = "Watch multiple streams simultaneously on Twitch, YouTube and Kick"
authors = ["Ilan Fonseca <ilan-_@hotmail.com>"]
license = "GNU General Public License v3.0"
repository = "https://github.com/ilanzgx/multistream"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-localhost = "2"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.1"
