[package]
name = "multistream"
version = "0.18.8"
description = "Watch multiple streams simultaneously on Twitch, YouTube and Kick"
authors = ["Ilan Fonseca <ilan-_@hotmail.com>"]
license = "GNU General Public License v3.0"
repository = "https://github.com/ilanzgx/multistream"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
walkdir = "2"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-localhost = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-notification = "2"
notify-rust = "4.12.0"
tauri-plugin-deep-link = "2"
thiserror = "2"
base64 = "0.22"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
zip = "4.6"
rand = "0.9"
tokio-tungstenite = { version = "0.30", features = ["native-tls"] }
cpal = "0.18"
hound = "3.5"
sha2 = "0.11"
urlencoding = "2.1.3"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
chrono = { version = "0.4", features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-opener = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.8.1"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[profile.release]
lto = "thin"
opt-level = "s"
strip = true

[profile.release.package."*"]
opt-level = "s"
